--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,16 @@
     <servlet-name>index</servlet-name>
     <url-pattern></url-pattern>
   </servlet-mapping>
+  <!-- login servlet -->
+  <servlet>
+    <servlet-name>login</servlet-name>
+    <servlet-class>app.servlets.LoginServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>login</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
   <!-- add servlet -->
   <servlet>
     <servlet-name>add</servlet-name>
